schema/testdata/errors/reserved_task_name_identity.keel
//expect-error:6:14:NamingError:There already exists a reserved model with the name 'Identity'
task Identity {
    fields {
        email Text
    }
}
